# Chipmunk

./: .gitignore  .luarc.json  CLAUDE.md  Cargo.toml  DECISIONS.md  DESIGN.md  IDEAS.md  README.md  ideas.md  naming.md  usage.md
design/: .gitignore  _quarto.yml  ideas.md  usage.md
design/discussions/: DECISIONS.md  api.md  deferred-ideas.md  opencascade-bindings.md
design/docs/: 00-overview.md  01-data-model.md  03-nc-and-postprocessors.md  04-toolpath-algorithms.md  06-project-structure.md  07-implementation-phases.md  08-integrations.md  11-plugin-system.md  audit-2026-04-04.md
design/implementation/: dependencies.md
design/tasks/: README.md  backlog.md  phase-01.md  phase-2.md  phase-4.md
discussions/: DECISIONS.md  api.md  brep-geometry.md
docs/: 00-overview.md  01-data-model.md  02-api-design.md  03-nc-and-postprocessors.md  04-toolpath-algorithms.md  05-frontend-design.md  06-project-structure.md  07-implementation-phases.md  08-integrations.md  09-part-update.md  10-opencascade.md  11-plugin-system.md  architecture.md  cli.md  discussion-operation-type-modeling.md  ir.md  llm-instruction.md  operations.md  patterns.md  postprocessors.md  rationale.md  usage.md  yaml-reference.md
postprocessors/: base.lua  heidenhain.lua
src/: lib.rs
src/core/: mod.rs  operation.rs  pattern.rs  postprocessors.rs  tool.rs  toolpath.rs  units.rs
src/io/: job.rs  mod.rs  parsing.rs
src/nc/: bridge.rs  compiler.rs  ir.rs  mod.rs  postprocessors.rs
src/operations/: mod.rs  (+2 more)
tasks/: backlog.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
tests/: nc_output.rs
(+15 files in other folders)
