[package]
name = "chipmunk"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Open source CAM tool"
authors = ["Thomas Van Riel"]

[[bin]]
name = "chipmunk"
path = "src/bin/chipmunk.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
mlua = { version = "0.11", features = [
  "lua54",
  "vendored",
  "anyhow",
  "serialize",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
approx = "0.5"
assert_cmd = "2"
